--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.0",
+        "maatwebsite/excel": "3.1.55",
         "yajra/laravel-datatables-oracle": "^11.1"
     },
     "require-dev": {
